# django-pg-jsonschema

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
django_pg_jsonschema/: fields.py  signals.py  sql.py
django_pg_jsonschema/migrations/: README.md
tests/: apps.py  models.py  settings.py
tests/test_models/: test_jsonschema.py
